<resources>
    <string name="app_name">BankingApp</string>

    <string name="form_username_error">Username is required</string>
    <string name="form_password_error">Password is required</string>
    <string name="form_confirm_password_not_match_error">Confirm password not match</string>
    <string name="form_confirm_password_error">Confirm password is required</string>
    <string name="form_payee_error">Payee is required</string>
    <string name="form_amount_error">Amount is required</string>

    <string name="login_title">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_register">Register</string>

    <string name="register_title">Register</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_btn_register">Register</string>

    <string name="dashboard_trx_item_expense">-%.2f</string>
    <string name="dashboard_trx_item_income">%.2f</string>
    <string name="dashboard_account_balance_label">You have</string>
    <string name="dashboard_account_balance">SGD %.2f</string>
    <string name="dashboard_account_no_label">Account No</string>
    <string name="dashboard_account_name_label">Account Holder</string>
    <string name="dashboard_transaction_history_label">Your Transaction History</string>
    <string name="dashboard_logout">Logout</string>
    <string name="dashboard_btn_transfer">Make Transfer</string>

    <string name="transfer_title">Transfer</string>
    <string name="transfer_payee_hint">Payee</string>
    <string name="transfer_amount_hint">Amount</string>
    <string name="transfer_description_hint">Description</string>
    <string name="transfer_btn_transfer">Transfer Now</string>

    <string name="payee_list_title">Payee List</string>
</resources>